fixed overlapping text in topic text-title

--- a/public/themes/vanilla/topic.less
+++ b/public/themes/vanilla/topic.less
@@ -120,6 +120,7 @@
 			margin: 0;
 
 			.topic-title {
+				line-height: 1.5em;
 				width: auto;
 				overflow: hidden;
 				margin: 0 0 -5px 0;
